src/main/java/com/example/ReactiveDemo/errors/nonConcrete/ApiError.java
package com.example.ReactiveDemo.errors.nonConcrete;

public record ApiError(
     String code,
     String message
) {}